--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "digipin": "^0.0.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-leaflet": "^5.0.0",
     "react-pdf": "^10.0.1",
